--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ h4 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
+    text-align: center;
 }
 
 .final.show {
@@ -86,7 +87,7 @@ h4 {
     animation: goIn 0.5s ease-in-out;
 }
 .nums span.out {
-    transform: translate(-50%, -50%) rotate(0deg); 
+
     animation: goOut 0.5s ease-in-out;
 }
 
